# rust-prac

./: README.md
creating_programming_languages/: README.md
creating_programming_languages/rustack/: func.txt  if.txt  recurse.txt
creating_programming_languages/rustack/src/: main.rs
programing_rust/: memo.md
rusty-book-manager/: Cargo.toml
webapi/: Cargo.toml  Dockerfile  compose.yaml  diesel.toml  test.sql
webapi/e2e/src/: Cargo.toml
webapi/e2e/tests/: e2e_test.rs
webapi/migrations/2024-09-16-135207_create_projects/: up.sql
webapi/migrations/2024-09-16-135306_create_technologies/: up.sql
webapi/migrations/2024-09-16-135315_create_adopts/: up.sql
webapi/src/: apis.rs  db_connector.rs  lib.rs  main.rs  models.rs
webapi/templates/: tech_page.html
webapi/tests/: integration_test.rs
